Feature/eip1 5690 update the api spec (#46)
* EMS- API - Spec update and related changes

* EMS API Refactoring - with all the changes

* Updated rest endpoints to match with spec

* Feature file updated to support rejected applications

* Integration added to save an application with and without signature

* Integration tests to cover with and without signature

* Adding more tests to cover signature/signature waiver part

* Adding more checks to integration tests

* Updating integration test to assert waiver reason

* Minor update to asserts
