# src/main/kotlin/uk/gov/dluhc/emsintegrationapi/database/entity/ApplicationDetails.kt
@@ -2,10 +2,12 @@ package uk.gov.dluhc.emsintegrationapi.database.entity
 
 import java.time.Instant
 import javax.persistence.Embeddable
+import javax.persistence.EnumType
+import javax.persistence.Enumerated
 import javax.validation.constraints.Size
 
 @Embeddable
-class ApprovalDetails(
+class ApplicationDetails(
     val createdAt: Instant,
 
     @field:Size(max = 9)
@@ -17,7 +19,22 @@ class ApprovalDetails(
     val authorisingStaffId: String,
 
     @field:Size(max = 50)
-    val source: String
+    val source: String,
+
+    @Enumerated(EnumType.STRING)
+    val applicationStatus: ApplicationStatus,
+
+    val signatureBase64: String?,
+
+    val signatureWaived: Boolean?,
+
+    @field:Size(max = 250)
+    val signatureWaivedReason: String?,
 ) {
     override fun hashCode() = javaClass.hashCode()
+
+    enum class ApplicationStatus {
+        APPROVED,
+        REJECTED
+    }
 }
